--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,9 @@
 databaseChangeLog:
   - include:
       file: db/changelog/changeset/V001__account-service_account.sql
+#  - include:
+#      file: db/changelog/changeset/account-V001__create-table.sql
+  - include:
+      file: db/changelog/changeset/balance-V001__create-table.sql
+  - include:
+      file: db/changelog/changeset/balance-audit-V001__create-table.sql
